map/static/map/darkly.css
/* ... */
.text-body {
  color: #fff !important;
}

.text-muted {
  color: #888 !important;
}

.text-black-50 {
  color: rgba(0, 0, 0, 0.5) !important;
}

.text-white-50 {
  color: rgba(255, 255, 255, 0.5) !important;
}

.text-hide {
  font: 0/0 a;
  color: transparent;
  text-shadow: none;
  background-color: transparent;
  border: 0;
}

.text-decoration-none {
  text-decoration: none !important;
}

.text-break {
  word-break: break-word !important;
  word-wrap: break-word !important;
}

.text-reset {
  color: inherit !important;
}

.visible {
  visibility: visible !important;
}

.invisible {
  visibility: hidden !important;
}

@media print {
  *,
  *::before,
  *::after {
    text-shadow: none !important;
    box-shadow: none !important;
  }
  a:not(.btn) {
    text-decoration: underline;
  }
  abbr[title]::after {
    content: " (" attr(title) ")";
  }
  pre {
    white-space: pre-wrap !important;
  }
  pre,
  blockquote {
    border: 1px solid #adb5bd;
    page-break-inside: avoid;
  }
  thead {
    display: table-header-group;
  }
  tr,
  img {
    page-break-inside: avoid;
  }
  p,
  h2,
  h3 {
    orphans: 3;
    widows: 3;
  }
  h2,
  h3 {
    page-break-after: avoid;
  }
  @page {
    size: a3;
  }
  body {
    min-width: 992px !important;
  }
  .container {
    min-width: 992px !important;
  }
  .navbar {
    display: none;
  }
  .badge {
    border: 1px solid #000;
  }
  .table {
    border-collapse: collapse !important;
  }
  .table td,
  .table th {
    background-color: #fff !important;
  }
  .table-bordered th,
  .table-bordered td {
    border: 1px solid #dee2e6 !important;
  }
  .table-dark {
    color: inherit;
  }
  .table-dark th,
  .table-dark td,
  .table-dark thead th,
  .table-dark tbody + tbody {
    border-color: #444;
  }
  .table .thead-dark th {
    color: inherit;
    border-color: #444;
  }
}

.blockquote-footer {
  color: #888;
}

.table-primary,
.table-primary > th,
.table-primary > td {
  background-color: #375a7f;
}

.table-secondary,
.table-secondary > th,
.table-secondary > td {
  background-color: #444;
}

.table-light,
.table-light > th,
.table-light > td {
  background-color: #adb5bd;
}

.table-dark,
.table-dark > th,
.table-dark > td {
  background-color: #303030;
}

.table-success,
.table-success > th,
.table-success > td {
  background-color: #00bc8c;
}

.table-info,
.table-info > th,
.table-info > td {
  background-color: #3498db;
}

.table-danger,
.table-danger > th,
.table-danger > td {
  background-color: #e74c3c;
}

.table-warning,
.table-warning > th,
.table-warning > td {
  background-color: #f39c12;
}

.table-active,
.table-active > th,
.table-active > td {
  background-color: rgba(0, 0, 0, 0.075);
}

.table-hover .table-primary:hover,
.table-hover .table-primary:hover > th,
.table-hover .table-primary:hover > td {
  background-color: #2f4d6d;
}

.table-hover .table-secondary:hover,
.table-hover .table-secondary:hover > th,
.table-hover .table-secondary:hover > td {
  background-color: #373737;
}

.table-hover .table-light:hover,
.table-hover .table-light:hover > th,
.table-hover .table-light:hover > td {
  background-color: #9fa8b2;
}

.table-hover .table-dark:hover,
.table-hover .table-dark:hover > th,
.table-hover .table-dark:hover > td {
  background-color: #232323;
}

.table-hover .table-success:hover,
.table-hover .table-success:hover > th,
.table-hover .table-success:hover > td {
  background-color: #00a379;
}

.table-hover .table-info:hover,
.table-hover .table-info:hover > th,
.table-hover .table-info:hover > td {
  background-color: #258cd1;
}

.table-hover .table-danger:hover,
.table-hover .table-danger:hover > th,
.table-hover .table-danger:hover > td {
  background-color: #e43725;
}

.table-hover .table-warning:hover,
.table-hover .table-warning:hover > th,
.table-hover .table-warning:hover > td {
  background-color: #e08e0b;
}

.table-hover .table-active:hover,
.table-hover .table-active:hover > th,
.table-hover .table-active:hover > td {
  background-color: rgba(0, 0, 0, 0.075);
}

.input-group-addon {
  color: #fff;
}

.nav-tabs .nav-link,
.nav-tabs .nav-link.active,
.nav-tabs .nav-link.active:focus,
.nav-tabs .nav-link.active:hover,
.nav-tabs .nav-item.open .nav-link,
.nav-tabs .nav-item.open .nav-link:focus,
.nav-tabs .nav-item.open .nav-link:hover,
.nav-pills .nav-link,
.nav-pills .nav-link.active,
.nav-pills .nav-link.active:focus,
.nav-pills .nav-link.active:hover,
.nav-pills .nav-item.open .nav-link,
.nav-pills .nav-item.open .nav-link:focus,
.nav-pills .nav-item.open .nav-link:hover {
  color: #fff;
}

.breadcrumb a {
  color: #fff;
}

.pagination a:hover {
  text-decoration: none;
}

.close {
  opacity: .4;
}

.close:hover, .close:focus {
  opacity: 1;
}

.alert {
  border: none;
  color: #fff;
}

.alert a,
.alert .alert-link {
  color: #fff;
  text-decoration: underline;
}

.alert-primary {
  background-color: #375a7f;
}

.alert-secondary {
  background-color: #444;
}

.alert-success {
  background-color: #00bc8c;
}

.alert-info {
  background-color: #3498db;
}

.alert-warning {
  background-color: #f39c12;
}

.alert-danger {
  background-color: #e74c3c;
}

.alert-light {
  background-color: #adb5bd;
}

.alert-dark {
  background-color: #303030;
}

.list-group-item-action {
  color: #fff;
}

.list-group-item-action:hover, .list-group-item-action:focus {
  background-color: #444;
  color: #fff;
}

.list-group-item-action .list-group-item-heading {
  color: #fff;
}

